<resources>
    <string name="_1layer_color">1layer Color</string>
    <string name="_1layer_scale">1layer Scale</string>
    <string name="_2layer_color">2layer Color</string>
    <string name="_2layer_scale">2layer Scale</string>
    <string name="_3layer_color">3layer Color</string>
    <string name="_3layer_scale">3layer Scale</string>
    <string name="a">A</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_audio_data_provider">AudioProvider</string>
    <string name="add_blur_effect">BlurEffect</string>
    <string name="add_composition">Composition</string>
    <string name="add_image">Image</string>
    <string name="add_mirror_effect">MirrorEffect</string>
    <string name="add_motion_blur_effect">MotionBlurEffect</string>
    <string name="add_particles">Particles</string>
    <string name="add_rgb_split_effect">RgbSplitEffect</string>
    <string name="add_segment">Bars</string>
    <string name="add_text">Text</string>
    <string name="ads_app_id">ca-app-pub-3759586557634138~9232424607</string>
    <string name="ads_export_banner">ca-app-pub-3759586557634138/4924284739</string>
    <string name="ads_footer_vis_banner_ad_unit_id">ca-app-pub-3759586557634138/9192413215</string>
    <string name="ads_header_banner_ad_unit_id">ca-app-pub-3759586557634138/2654925024</string>
    <string name="ads_interstitial">ca-app-pub-3759586557634138/3471601953</string>
    <string name="ads_reward_audio_bitrate" />
    <string name="ads_reward_end_at" />
    <string name="ads_reward_fps" />
    <string name="ads_reward_height" />
    <string name="ads_reward_logo">ca-app-pub-3759586557634138/6683026645</string>
    <string name="ads_reward_video_bitrate" />
    <string name="ads_reward_width" />
    <string name="ads_unit_id">ca-app-pub-3759586557634138/8656952978</string>
    <string name="alignment_position">Alignment Position</string>
    <string name="alpha_0">0.949</string>
    <string name="alpha_1">0.870</string>
    <string name="alpha_2">0.541</string>
    <string name="alpha_3">0.129</string>
    <string name="alpha_4">0.050</string>
    <string name="anchor_center">center</string>
    <string name="anchor_end">end</string>
    <string name="anchor_start">start</string>
    <string name="anchor_unset">unset</string>
    <string name="anchor_x">Anchor X</string>
    <string name="anchor_y">Anchor Y</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Avee Player</string>
    <string name="app_settings_name">Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance">Appearance</string>
    <string name="audio_capture">Audio Capture</string>
    <string name="audio_duration_ms">Audio Duration Ms</string>
    <string name="audio_eqcustom">Custom</string>
    <string name="audio_equalizer">Equalizer</string>
    <string name="audio_provider_index">Audio Provider Index</string>
    <string name="audio_virtualizer">Virtualizer</string>
    <string name="auto_detect_color_key">Auto Detect Color Key</string>
    <string name="aweight">AWeight</string>
    <string name="b">B</string>
    <string name="bar_height_multiplier">Bar Height Multiplier</string>
    <string name="bar_width">Bar Width</string>
    <string name="bar_width_affected_by_shape">Bar Width Affected By Shape</string>
    <string name="bars">Bars</string>
    <string name="beat">Beat</string>
    <string name="beat_cam_shake_less">BeatCamShakeLess</string>
    <string name="beat_cam_shake_more">BeatCamShakeMore</string>
    <string name="beat_cam_shake_rot_less">BeatCamShakeRotLess</string>
    <string name="beat_cam_shake_rot_more">BeatCamShakeRotMore</string>
    <string name="beat_random_shake">BeatRandomShake</string>
    <string name="beat_range_bar_first">Beat Range Bar First</string>
    <string name="beat_range_bar_last">Beat Range Bar Last</string>
    <string name="beat_range_value_higher">Beat Range Value Higher</string>
    <string name="beat_range_value_lower">Beat Range Value Lower</string>
    <string name="beat_smooth">Beat Smooth</string>
    <string name="beat_trigger_anim">BeatTriggerAnim</string>
    <string name="behavior">Behavior</string>
    <string name="behaviour">Behaviour</string>
    <string name="blend_mode">Blend Mode</string>
    <string name="blend_mode_add">Add</string>
    <string name="blend_mode_content">Blend Mode Content</string>
    <string name="blend_mode_pre_mul_alpha">PreMulAlpha</string>
    <string name="blend_mode_screen">Screen</string>
    <string name="blur">Blur</string>
    <string name="blur_amount_multiplier">Blur Amount Multiplier</string>
    <string name="blur_divider">Blur Divider</string>
    <string name="blur_enabled">Blur Enabled</string>
    <string name="blur_multiplier">Blur Multiplier</string>
    <string name="blur_radius">Blur Radius</string>
    <string name="blurred_border">Blurred Border</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clearing_cache">Clearing cache</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="color">Color</string>
    <string name="color_blend_offset">Color Blend Offset</string>
    <string name="color_from">Color From</string>
    <string name="color_key">Color Key</string>
    <string name="color_key_enabled">Color Key Enabled</string>
    <string name="color_to">Color To</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">29a29bb2f2b5474ea6b25b827e9aa1f4</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="constant">Constant</string>
    <string name="constant_cam_shake_less">ConstantShake</string>
    <string name="dialog_playlist_append_overwrite_option">Overwrite instead of append</string>
    <string name="dialog_playlist_save_relative_paths_option">Use relative paths when saving</string>
    <string name="dialog_playlist_wont_save_streams">Streams will not be saved on platform playlists!</string>
    <string name="promo_checkbox_terms">I agree to receive marketing emails, special offers, and accept Privacy Policy</string>
    <string name="promo_code_label">Your code:</string>
    <string name="promo_disclaimer">The trial can be used once.\nThe subscription will be billed automatically after the free trial.\nCancel during the trial period will not be charged.\nTo manage or cancel please visit GooglePlay 24 hours in advance.</string>
    <string name="promo_email_hint">Your Email</string>
    <string name="promo_get_code_button">Get promo code</string>
    <string name="promo_store_button">Claim in store</string>
    <string name="promo_subtitle">Claim your</string>
    <string name="promo_subtitle_p2">14 days trial</string>
    <string name="promo_title">Ready to unleash\nyour creativity?</string>
</resources>