<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:paddingLeft="0dp"
    android:paddingTop="8dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/dialog_promo_background"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:clipToPadding="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="500dp">
            <ImageView
                android:layout_gravity="end"
                android:id="@+id/btnClose"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_marginEnd="-20dp"
                app:tint="@color/gray_2"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/greeting_container"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#b4e1eb"
                    android:gravity="center_horizontal"
                    android:id="@+id/title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_title"
                    android:shadowColor="#b4e1eb"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="10"
                    android:textAllCaps="true"/>
                <RelativeLayout
                    android:id="@+id/animated_container_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp">
                    <View
                        android:background="@color/promo_blu"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"/>
                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="20dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/sound_wave_lottie"/>
                </RelativeLayout>
                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:id="@+id/subtitle_line1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_subtitle"
                    android:shadowColor="@color/white"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:textAllCaps="true"/>
                <TextView
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:id="@+id/subtitle_line2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_subtitle_p2"
                    android:shadowColor="@color/white"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="15"
                    android:textAllCaps="true"/>
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#a0a1a0"
                    android:gravity="center_horizontal"
                    android:id="@+id/promo_disclaimer_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:textSize="11sp"
                    android:textColor="#808180"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/promo_disclaimer"/>
            </LinearLayout>
            <EditText
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textColorHint="#808180"
                android:gravity="center_horizontal"
                android:id="@+id/email_input_et"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/promo_email_hint"
                android:inputType="textEmailAddress"/>
            <Button
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/submit_btn"
                android:background="@drawable/dialog_promo_button"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/promo_get_code_button"/>
            <RelativeLayout
                android:id="@+id/checkbox_rl"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:buttonTint="@color/white"/>
                <TextView
                    android:id="@+id/checkbox_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_checkbox_terms"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/checkbox"/>
            </RelativeLayout>
            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/code_label_tv"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/promo_code_label"/>
            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#808180"
                android:id="@+id/code_tv"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:textIsSelectable="true"/>
            <Button
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/claim_btn"
                android:background="@drawable/dialog_promo_button"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promo_store_button"/>
        </LinearLayout>
        <ProgressBar
            android:theme="@style/AppTheme"
            android:id="@+id/loading_indicator"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
