<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/contentLoading"
        android:padding="32dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progressBar_cyclic"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/content"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TabHost
            android:id="@+id/tabHost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ListView
                            android:id="@+id/listViewPlaylist1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="@dimen/textSizeM3"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:visibility="visible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginBottom="2dp"
                            android:text="@string/dialog_playlist_wont_save_streams"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ListView
                            android:id="@+id/listViewPlaylist2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>
                        <CheckBox
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="@dimen/textSizeM3"
                            android:id="@+id/checkBoxRelative"
                            android:visibility="visible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dialog_playlist_save_relative_paths_option"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
        <CheckBox
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/textSizeM3"
            android:id="@+id/checkBoxOverwrite"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_playlist_append_overwrite_option"/>
    </LinearLayout>
</LinearLayout>
